# xgeom_static.plugin

./: .gitignore  CMakeLists.txt  README.md
Plugin.config/: resource_pipeline.config.txt
source/: xgeom_static.h  xgeom_static_descriptor.h  xgeom_static_details.h  xgeom_static_rsc_descriptor.h  xgeom_static_xgpu_rsc_loader.cpp  xgeom_static_xgpu_rsc_loader.h  xgeom_static_xgpu_runtime.h
source/Compiler/: main.cpp  xgeom_static_compiler.cpp  xgeom_static_compiler.h
source/runtime/: GeomStaticBasicShader_frag.glsl  GeomStaticBasicShader_vert.glsl  GeomStaticShadowMapCreation_frag.glsl  GeomStaticShadowMapCreation_vert.glsl  draw_mb_input_full.vert  mb_input_definition_full.vert  mb_input_definition_position.vert  mb_lineartogamma.frag  mb_lineartogamma_frag.glsl  mb_material_pbr.frag  mb_material_pbr.glsl  mb_standard_definition_vert.glsl  mb_standard_pbr.frag  mb_standard_pbr_frag.glsl  mb_standard_shadow.frag  mb_tone_mapper_gt7.glsl  mb_tone_mapper_lion.frag  mb_varying_definition_full.glsl  md_tone_mapper_agX.glsl  md_tone_mapper_exposure_function.glsl  md_tone_mapper_lion.glsl  md_tone_mapper_lottes.glsl  md_tone_mapper_pbr_neutral.glsl  md_tone_mapper_uchimura.glsl  xgeom_static_mb_clusters.vert  xgeom_static_mb_input_full.vert  xgeom_static_mb_input_position.vert  xgeom_static_mb_position_vert.glsl  xgeom_static_mb_standard_vert.glsl
